# sudoku2lp

./: Cargo.toml  README.md
puzzles/: 4x4.lp  4x4.txt  hardest.lp  hardest.txt
src/: main.rs  solve.py
