[package]
name = "sudoku2lp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive"] }
good_lp = { version = "1.7.0", features = ["lp-solvers", "minilp"] }
